--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "workspaces": ["packages/*"],
   "scripts": {
-    "start:web": "lerna --scope @mono/web run start"
+    "start:web": "lerna --scope @mono/web run start",
+    "start:comp": "lerna --scope @mono/web run start"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
