--- a/packages/bussiness-components/package.json
+++ b/packages/bussiness-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mono/components",
+  "name": "@mono/bussiness-components",
   "version": "0.0.0",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
@@ -17,10 +17,21 @@
     "registry": "http://registry.npm.wmcloud.com"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "start": "rollup -c --watch --port 5555"
   },
   "dependencies": {
     "antd": "^4.16.3",
-    "react": "16.14.0"
+    "react": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "rollup": "^2.52.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "typescript": "^4.3.4"
   }
 }
